@@ -1,3 +1,13 @@
+2009-12-06  Ulf Jasper  <ulf.jasper@web.de>
+
+	* net/newst-backend.el :
+	* net/newst-plainview.el:
+	* net/newst-reader.el:
+	* net/newst-ticker.el:
+	* net/newst-treeview.el:
+	* net/newsticker.el: Require/provide newst-... (instead of
+	newsticker-...). (Bug#5096)
+
 2009-12-06  Chong Yidong  <cyd@stupidchicken.com>
 
 	* simple.el (beginning-of-visual-line): Constrain to field
